# amsets

./: .gitignore  README.md  deploy-contract.sh  docker-compose.yml  whitepaper.md
amsets-api/: .env.example  drizzle.config.ts  package-lock.json  package.json
amsets-api/drizzle/: 0000_real_the_executioner.sql  0001_volatile_centennial.sql
amsets-api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
amsets-api/scripts/: burn-unknown-tokens.ts
amsets-api/src/: index.ts
amsets-api/src/db/: index.ts  redis.ts  schema.ts
amsets-api/src/middleware/: cors.middleware.ts
amsets-api/src/routes/: admin.route.ts  auth.route.ts  content.route.ts  listings.route.ts  livepeer.route.ts  marketplace.route.ts  purchases.route.ts  upload.route.ts  webhook.route.ts
amsets-api/src/services/: helius.service.ts  (+5 more)
amsets-app/: .env.example  next.config.ts  package-lock.json  package.json
amsets-app/app/: globals.css  layout.tsx  page.tsx
amsets-app/hooks/: useSession.ts
amsets-app/lib/: anchor.ts  arweave-bundle.ts  crypto.ts  lit.ts  storage.ts  useAuth.ts
amsets-app/providers/: AuthContext.tsx  Providers.tsx  SmoothScrollProvider.tsx  WalletProvider.tsx
amsets-contracts/: Anchor.toml  deploy.sh  package.json
amsets-contracts/programs/amsets-registry/: Cargo.toml
amsets-contracts/programs/amsets-registry/src/: lib.rs
amsets-contracts/tests/: amsets-contracts.ts  amsets-registry.ts
project-docs/: architecture.md  decentralized-architecture.md  deployment.md  dev-deployment.md  production-deployment.md  tech-specs.md  test-report.md
(+31 files in other folders)
